--- a/ncurses/CMakeLists.txt
+++ b/ncurses/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 set(PREPROCESSOR_CMD "gcc -E")
-set(PREPROCESSOR_ARGS "PREPROCESSOR_CMD-DHAVE_CONFIG_H -I. -I../include -D_DEFAULT_SOURCE -D_XOPEN_SOURCE=600 -DNDEBUG")
+set(PREPROCESSOR_ARGS "-DHAVE_CONFIG_H -I${CMAKE_CURRENT_BINARY_DIR} -I${CMAKE_CURRENT_SOURCE_DIR} -I${CMAKE_SOURCE_DIR}/include -D_DEFAULT_SOURCE -D_XOPEN_SOURCE=600 -DNDEBUG")
 
 ### Generated C source files
 
@@ -37,8 +37,8 @@ add_custom_command(
 set(EXPANDED_C ${CMAKE_CURRENT_BINARY_DIR}/expanded.c)
 add_custom_command(
     OUTPUT ${EXPANDED_C}
-    COMMAND sh -e ./tty/MKexpanded.sh "${PREPROCESSOR_CMD}" ${PREPROCESSOR_ARGS} > ${EXPANDED_C}
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    COMMAND sh -e ${CMAKE_CURRENT_SOURCE_DIR}/tty/MKexpanded.sh "${PREPROCESSOR_CMD}" ${PREPROCESSOR_ARGS} > ${EXPANDED_C}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
 
 set(FALLBACK_C ${CMAKE_CURRENT_BINARY_DIR}/fallback.c)
