--- a/ncurses/CMakeLists.txt
+++ b/ncurses/CMakeLists.txt
@@ -137,7 +137,7 @@ add_custom_command(
     OUTPUT ${INIT_KEYTRY_H}
     COMMAND ${CMAKE_CURRENT_BINARY_DIR}/make_keys ${KEYS_LIST} > ${INIT_KEYTRY_H}
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/include
-    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/make_keys
+    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/make_keys ${KEYS_LIST}
 )
 
 set(PARAMETRIZED_H ${CMAKE_CURRENT_BINARY_DIR}/parametrized.h)
