Make some cmake logic xplat

--- a/ncurses/CMakeLists.txt
+++ b/ncurses/CMakeLists.txt
@@ -5,13 +5,28 @@ add_compile_definitions(NDEBUG)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 14)
 
-add_compile_options(-Werror)
+if(MSVC)
+    add_compile_options(/WX)
+else()
+    add_compile_options(-Werror)
+endif()
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-set(PREPROCESSOR_CMD "gcc -E")
+if (MSVC)
+    set(PREPROCESSOR_CMD "cl /E")
+else()
+    set(PREPROCESSOR_CMD "gcc -E")
+endif()
+
+if (MSVC)
+    set(EXE_EXT ".exe")
+else()
+    set(EXE_EXT "")
+endif()
+
 set(PREPROCESSOR_ARGS "-DHAVE_CONFIG_H -I${CMAKE_CURRENT_BINARY_DIR} -I${CMAKE_CURRENT_SOURCE_DIR} -I${CMAKE_SOURCE_DIR}/include -D_DEFAULT_SOURCE -D_XOPEN_SOURCE=600 -DNDEBUG")
 
 ### Generated C source files
@@ -28,7 +43,7 @@ add_custom_command(
     OUTPUT ${COMP_CAPTAB_C}
     COMMAND sh -e ${CMAKE_CURRENT_SOURCE_DIR}/tinfo/MKcaptab.sh awk 1 ${CMAKE_CURRENT_SOURCE_DIR}/tinfo/MKcaptab.awk ${CMAKE_SOURCE_DIR}/include/Caps ${CMAKE_SOURCE_DIR}/include/Caps-ncurses > ${COMP_CAPTAB_C}
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/make_hash
+    DEPENDS ${MAKE_HASH_PATH}
 )
 
 set(COMP_USERDEFS_C ${CMAKE_CURRENT_BINARY_DIR}/comp_userdefs.c)
@@ -36,7 +51,7 @@ add_custom_command(
     OUTPUT ${COMP_USERDEFS_C}
     COMMAND sh -e ${CMAKE_CURRENT_SOURCE_DIR}/tinfo/MKuserdefs.sh awk 1 ${CMAKE_SOURCE_DIR}/include/Caps ${CMAKE_SOURCE_DIR}/include/Caps-ncurses > ${COMP_USERDEFS_C}
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/make_hash
+    DEPENDS ${MAKE_HASH_PATH}
 )
 
 set(EXPANDED_C ${CMAKE_CURRENT_BINARY_DIR}/expanded.c)
@@ -59,11 +74,7 @@ add_custom_command(
     COMMAND awk -f ./tinfo/MKnames.awk bigstrings=1 ../include/Caps ../include/Caps-ncurses > ${NAMES_C}
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
-
-add_custom_target(
-    NAMES_C_TARGET DEPENDS
-    ${NAMES_C}
-)
+add_custom_target(NAMES_C_TARGET DEPENDS ${NAMES_C})
 
 set(UNCTRL_C ${CMAKE_CURRENT_BINARY_DIR}/unctrl.c)
 add_custom_command(
@@ -84,20 +95,29 @@ add_custom_command(
 
 ### Misc tools
 
+set(MAKE_KEYS_PATH ${CMAKE_CURRENT_BINARY_DIR}/make_keys${EXE_EXT})
 add_executable(make_keys
     ./tinfo/make_keys.c
 )
-
-add_executable(make_hash
-    ./tinfo/make_hash.c
+set_target_properties(make_keys
+    PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
 )
-
 add_dependencies(make_keys
     NAMES_C_TARGET
     NCURSES_DEF_H_TARGET
     HASHSIZE_H_TARGET
+    CURSES_H_TARGET
 )
 
+set(MAKE_HASH_PATH ${CMAKE_CURRENT_BINARY_DIR}/make_hash${EXE_EXT})
+add_executable(make_hash
+    ./tinfo/make_hash.c
+)
+set_target_properties(make_hash
+    PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
+)
 add_dependencies(make_hash
     NCURSES_DEF_H_TARGET
     HASHSIZE_H_TARGET
@@ -108,7 +128,7 @@ add_dependencies(make_hash
 set(KEYS_LIST ${CMAKE_CURRENT_BINARY_DIR}/keys.list)
 add_custom_command(
     OUTPUT ${KEYS_LIST}
-    COMMAND sh ./tinfo/MKkeys_list.sh ../include/Caps ../include/Caps-ncurses | LC_ALL=C sort > ${KEYS_LIST}
+    COMMAND sh ./tinfo/MKkeys_list.sh ../include/Caps ../include/Caps-ncurses | sort > ${KEYS_LIST}
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
@@ -120,7 +140,6 @@ add_custom_command(
     COMMAND sh ./MKncurses_def.sh ./ncurses_defs > ${NCURSES_DEF_H}
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/include
 )
-
 add_custom_target(NCURSES_DEF_H_TARGET DEPENDS ${NCURSES_DEF_H})
 
 set(HASHSIZE_H ${CMAKE_CURRENT_BINARY_DIR}/hashsize.h)
@@ -129,16 +148,17 @@ add_custom_command(
     COMMAND sh ./MKhashsize.sh ./Caps ./Caps-ncurses > ${HASHSIZE_H}
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/include
 )
-
 add_custom_target(HASHSIZE_H_TARGET DEPENDS ${HASHSIZE_H})
 
 set(INIT_KEYTRY_H ${CMAKE_CURRENT_BINARY_DIR}/init_keytry.h)
 add_custom_command(
     OUTPUT ${INIT_KEYTRY_H}
-    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/make_keys ${KEYS_LIST} > ${INIT_KEYTRY_H}
+    COMMAND ${MAKE_KEYS_PATH} ${KEYS_LIST} > ${INIT_KEYTRY_H}
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/include
-    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/make_keys ${KEYS_LIST}
+    DEPENDS ${MAKE_KEYS_PATH} ${KEYS_LIST}
 )
+add_custom_target(INIT_KEYTRY_H_TARGET DEPENDS ${INIT_KEYTRY_H})
+add_dependencies(INIT_KEYTRY_H_TARGET make_keys)
 
 set(PARAMETRIZED_H ${CMAKE_CURRENT_BINARY_DIR}/parametrized.h)
 add_custom_command(
@@ -155,7 +175,9 @@ add_custom_command(
     COMMAND cat ./curses.tail >> ${CURSES_H}
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/include
 )
+add_custom_target(CURSES_H_TARGET DEPENDS ${CURSES_H})
 
+# Represents all generated headers
 add_custom_target(
     GEN_HEADERS DEPENDS
     ${NCURSES_DEF_H}
@@ -163,6 +185,7 @@ add_custom_target(
     ${INIT_KEYTRY_H}
     ${PARAMETRIZED_H}
 )
+add_dependencies(GEN_HEADERS INIT_KEYTRY_H_TARGET)
 
 add_library(ncurses STATIC
     ${CODES_C}
