Replace MKexpanded.sh with the new python script

--- a/ncurses/CMakeLists.txt
+++ b/ncurses/CMakeLists.txt
@@ -81,7 +81,7 @@ add_custom_command(
 
 add_custom_command(
     OUTPUT ${EXPANDED_C}
-    COMMAND sh -e ${CMAKE_CURRENT_SOURCE_DIR}/tty/MKexpanded.sh "${PREPROCESSOR_CMD}" ${PREPROCESSOR_ARGS} > ${EXPANDED_C}
+    COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/tty/MKexpanded.py "${PREPROCESSOR_CMD} ${PREPROCESSOR_ARGS}" > ${EXPANDED_C}
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
 
